# hata

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  changelog.md  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml  config.yml  do_it_yourself.yml  feature_request.yml
.github/workflows/: python-test-service.yml
docs/examples/: README.md  readme.md
docs/examples/scaffold_example/: .gitignore  README.md  pyproject.toml
docs/examples/scaffold_example/dipp/: .env  __main__.py  cli.py  constants.py
docs/examples/scaffold_example/dipp/bots/: __init__.py  jacket.py  label.py
docs/examples/scaffold_example/dipp/plugins/: __init__.py  ping.py
docs/intro/: Chapter0_Introduction.md  Chapter1_hata_basics.md  Chapter2_commands.md  Chapter2_events.md  Chapter2_events_CommandProcesser.md  Chapter3_events_rest.md
docs/ref/: ACTIVITY_TYPES.md  Achievement.md  ActivityBase.md  ActivityCustom.md  ActivityFlag.md  ActivityGame.md  (+114 more)
hata/: __init__.py  __main__.py  activity.py  analyzer.py  application.py  audit_logs.py  channel.py  client.py  client_core.py  color.py  debug.py  deprecate_backend.py  dereaddons_local.py  doct.py  embed.py  emoji.py  emojis.dnd  env.py  eventloop.py  events.py  events_compiler.py  exceptions.py  executor.py  extension_loader.py  futures.py  gateway.py  guild.py  http.py  integration.py  invite.py  ios.py  kokoro_sqlalchemy.py  message.py  oauth2.py  opus.py  others.py  parsers.py  permission.py  player.py  prettyprint.py  (+23 more)
hata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: deploy.sh
(+8126 files in other folders)
